# kapitan-vscode-extension

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README_DEV.md  pyproject.toml  requirements-dev.txt
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/workflows/: build-extension.yml  pre-commit.yml  python-tests.yml
client/: .vscodeignore  LICENSE  language-configuration.json  package-lock.json  package.json  prepublish.sh  tsconfig.json  tsconfig.tsbuildinfo  webpack.config.js
client/src/: constants.ts  extension.ts  setup.ts  utils.ts
server/: __main__.py  requirements.txt  server.py
